# tsx-files-as-source-of-truth

./: Cargo.toml
src/: ast.json  ast.rs  index.html  main.rs  other.rs  parser.rs
