[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = '1.0.56'
regex = "1"
lazy_static ='1.4.0'
structopt = { version = "0.3.15" }
swc = { git = "https://github.com/swc-project/swc" }
swc_atoms= { git = "https://github.com/swc-project/swc" }
swc_ecma_ast= { git = "https://github.com/swc-project/swc" }
swc_ecma_codegen= { git = "https://github.com/swc-project/swc" }
swc_ecma_parser= { git = "https://github.com/swc-project/swc" }
swc_ecma_preset_env= { git = "https://github.com/swc-project/swc" }
swc_ecma_transforms= { git = "https://github.com/swc-project/swc" }
swc_ecma_visit= { git = "https://github.com/swc-project/swc" }
swc_visit= { git = "https://github.com/swc-project/swc" }
walkdir = "2"
serde = '1.0.136'
serde_json = '1.0.79'
serde_yaml = '0.8.23'

[dependencies.swc_common]
git = "https://github.com/swc-project/swc"
features = ["tty-emitter"]